Resolves: tdf#101067 put SolarMutexGuard back in again

commit 4f27ff917237be96eec897d4af90a3379be904c6
Author: Tor Lillqvist <tml@iki.fi>
Date:   Mon Jul 29 18:24:23 2013 +0300

    Avoid SolarMutex assertion in a dbgutil build when exiting Impress

put in a SolarMutex in that ImpTimedRefDev dtor for what sounds like
just this problem

commit 9f0766917a4fb1bc8fe1786c3b46132dd63c1c66
Author: Armin Le Grand <Armin.Le.Grand@cib.de>
Date:   Fri Jul 1 14:40:00 2016 +0200

    tdf#50613 add support to load charts asynchronously

took it out again, to presumably move it into TextLayouterDevice
but we destroy this thing asyncronously outside of TextLayouterDevice
so lets put it back in again

Change-Id: If801a701701a3d87fce2f76bc22bb3184b46743a