drawinglayer/source/primitive2d/textlayoutdevice.cxx
@@ -85,6 +85,7 @@ namespace
     ImpTimedRefDev::~ImpTimedRefDev()
     {
         OSL_ENSURE(0L == mnUseCount, "destruction of a still used ImpTimedRefDev (!)");
+        const SolarMutexGuard aSolarGuard;
         mpVirDev.disposeAndClear();
     }
 
